# refactoring-python

./: .pre-commit-config.yaml  README.md  mypy.ini  pep-0008.md  pyproject.toml
ch1/: README.md  __init__.py  _statement.py  _statement_polymorphic.py  create_statement_data.py  encapsulate_json.py  nested_functions.py  starting_point.py  statement.py  status0.py  status1_nested_functions.py  status2_separate_into_2_phases.py  status3_polymorphic.py
ch10/: 1001_decompose_conditional.py  1002_consolidate_conditional_expression.py  1003_replace_nested_conditional_with_guard_clauses.py  1004_replace_conditional_with_polymorphism.py  1005_introduce_special_case.py  1006_introduce_assertion.py  README.md
ch11/: 1101_origin.py  1101_separate_query_from_modifier.py  1102_origin.py  1102_parameterize_function.py  1103_origin.py  1103_remove_flag_argument.py  1104_preserve_whole_object.py  1105_origin.py  1105_replace_parameter_with_query.py  1106_origin.py  1106_replace_query_with_parameter.py  1107_remove_setting_method.py  1109_replace_function_with_command.py  1110_origin.py  1110_replace_command_with_function.py  README.md
ch12/: 1201_origin.py  1201_pull_up_method.py  1203_origin.py  1203_pull_up_constructor_body.py  1206_origin.py  1206_replace_type_code_with_subclasses.py  1207_remove_subclass.py  1208_extract_superclass.py  1208_orgin.py  1210_repalce_subclass_with_delegate.py  1211_origin.py  1211_repalce_superclass_with_delegate.py  README.md
ch4/: README.md  conftest.py  starting_point.py  test_1_province.py  test_2_province.py  test_3_change_fixture.py  (+1 more)
(+33 files in other folders)
