[tool.poetry]
name = "refactoring"
version = "0.1.0"
description = "Martin Fowler's Refactoring in Python"
authors = ["twotwo <twotwo.li@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.2.0"
flake8 = "^3.7.9"
mypy = "^0.770"
pytest = "^5.4.1"
isort = "^5.8.0"
coverage = "^5.2.1"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = "0"
include_trailing_comma = true
line_length = "119"
lines_after_imports = "2"
multi_line_output = "3"
use_parentheses = true
force_to_top = "setuppath"

[tool.black]
line-length = 119
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
